Hide small img on mobile, fixes #16

--- a/style/style.css
+++ b/style/style.css
@@ -555,7 +555,17 @@ h3{
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
 
+    .aboutitimage a {
+        display: none;
+    }
 
+    .aboutitimage{
+        display: none;
+    }
+
+    .aboutittext{
+        width: 100%;
+    }
 
     .menu a {
         display: none;
